...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="70dp">

        <ImageView
            android:id="@+id/view_news_item_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:checkable="true"
            android:src="@drawable/expand_more_24"
...

        <androidx.constraintlayout.widget.Group
            android:id="@+id/news_item_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="news_item_description_text_view, news_item_category_text_view" />

        <TextView
            android:id="@+id/news_item_description_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
...
