...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/about_back_image_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back_large"
        android:visibility="gone"
...
